more alignment fixes + some thomas css feedback

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -47,6 +47,9 @@
 .font-step-5 {
   font-size: var(--step-5);
 }
+.font-wdth-90 {
+  font-variation-settings: "wdth" 90;
+}
 html,
 body {
   font-family: "Noto Sans", sans-serif !important;
